trunk/Archive2/ba/15defe4da375d4/output
main.cpp: In constructor 'child<A, B, C>::child()':
main.cpp:8:19: error: class 'child<A, B, C>' does not have any field named 'parent'
         child() : parent() {}
                   ^
